# AIM24_Learn_By_Qmian

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Documents/: 项目文件目录结构说明.md
Documents/依赖注入简述和使用/: 依赖注入简述和使用.md
Documents/环境配置手册/: 环境配置手册.md
Documents/速通版本管理工具/: 速通版本管理工具.md
Modules/Cango.GalaxySDK/Headers/Cango/: GalaxySDK.hpp
Modules/Cango.TaskDesign/: CMakeLists.txt
Modules/CangoMake/Cango/: AddModulesInDirectory.cmake
Sango/: CMakeLists.txt
Sango/Sources/Assistant/: CMakeLists.txt
Sango/Sources/Assistant/Headers/Sango/: Assistant.hpp
Sango/Sources/Assistant/Headers/Sango/Assistant/: TaskArchitect.hpp
Sango/Sources/Assistant/Sources/: Assistant.cpp  TaskArchitect.cpp
Sango/Sources/Assistant/Testers/: Sango.cpp
Sango/Sources/GraphicUserInterface/: CMakeLists.txt
Sango/Sources/GraphicUserInterface/Sources/: GraphicUserInterface.cpp  imgui_impl_win32.cpp
Sango/Sources/GraphicUserInterface/Testers/: Program.cpp
Sango/Sources/SangoConsole/: CMakeLists.txt
Sango/Sources/SangoConsole/Sources/: SangoConsole.cpp
Sango/Sources/SangoConsole/Testers/: Program.cpp
Scripts/: check_ifconfig.bash  generate_module.bash  task_detect_shutdown.bash  virtual_serial_port.bash
Scripts/autorun.d/: README.md  install.sh
Sources/ArmorDetectors/: CMakeLists.txt  README.md
Sources/ArmorDetectors/Headers/LangYa/: ArmorDetectors.hpp
Sources/ArmorDetectors/Headers/LangYa/ArmorDetectors/: Armor.hpp  ArmorCorrector.hpp  ArmorDetector.hpp  ArmorFilter.hpp  CorrectedDetector.hpp  InferenceAPI.hpp  NumberClassifier.hpp
Sources/ArmorDetectors/Sources/: ArmorDetector.cpp  ArmorDetectors.cpp  ArmorFilter.cpp  InferenceAPI.cpp  NumberClassifier.cpp
Sources/AutoAim/: CMakeLists.txt  README.md
Sources/AutoAim/Headers/LangYa/: AutoAim.hpp
Sources/AutoAim/Headers/LangYa/AutoAim/: ExtendedKalman.hpp  ExtendedKalmanOld.hpp  Gimbals.hpp  IDBuffer.hpp  MainService.hpp  Navis.hpp  NormalEKF.hpp  PNPAimResult.hpp  PoseSolver.hpp  Predictor.hpp  SineWave.hpp  VehicleTracking.hpp  VofaJustFloat.hpp
Sources/AutoAim/Sources/: AutoAim.cpp  IDBuffer.cpp  NormalEKF.cpp  PoseSolver.cpp  Predictor.cpp  VehicleTracking.cpp
Sources/AutoAim/Testers/: Main.cpp
Sources/AutoAim/Testers/.old/: AppNavi2Serial.cpp  ControlTester.cpp  Drone.cpp  DroneService.hpp  Fast.cpp  OutpostModel.hpp  OutpostModelTester.cpp  ToBytes.cpp  VofaAttendant.cpp  VofaAttendant.hpp
Sources/Common/: CMakeLists.txt  README.md
Sources/Common/Dockens/: Doxyfile.in  conf.in
Sources/Common/Headers/LangYa/: OpenCVUtils.hpp  RoboMaster.hpp
Sources/Common/Headers/LangYa/CodeHelper/_AntiWindows/: AntiMacros
Sources/Common/Headers/LangYa/OpenCVUtils/: ToSpan.hpp
Sources/Common/Headers/LangYa/RoboMaster/: RefereeMessage.hpp  UnitType.hpp
Sources/Common/Sources/: CodeHelper.cpp  OpenCVUtils.cpp  RoboMaster.cpp
Sources/Common/Testers/olds/: Application.cpp  AutoAimManager.cpp  AutoRunManager.cpp  ConfigTester.cpp  Experiments.cpp
Sources/ROSHow/: CMakeLists.txt  README.md  package.xml
Sources/ROSHow/Sources/: main.cpp
Thirdparties/imgui-docking-1.90.8/: CMakeLists.txt
Thirdparties/lua-5.4.7/: CMakeLists.txt
